--- a/app/src/main/res/layout/apod_lite_item.xml
+++ b/app/src/main/res/layout/apod_lite_item.xml
@@ -18,7 +18,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:cropToPadding="true"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -28,12 +31,12 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/image_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:adjustViewBounds="true"
-                android:scaleType="fitStart"
+                android:scaleType="fitXY"
                 tools:src="@drawable/default_image"/>
 
             <TextView
@@ -46,11 +49,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/image_view"
-                android:textAlignment="center"
                 android:textStyle="bold"
-                android:textAllCaps="true"
-                android:textSize="28sp"
-                android:padding="5dp"
+                android:textSize="20sp"
+                android:textColor="@color/purple_700"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingTop="10dp"
                 tools:text="The Medusa Nebula"
                 />
 
@@ -72,7 +76,24 @@
                 android:paddingBottom="5dp"
                 android:textColor="@color/white"
                 android:background="@color/black"
+                />
 
+            <TextView
+                android:id="@+id/explaination"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitStart"
+                android:src="@drawable/default_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                android:lines="2"
+                android:textStyle="bold"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="10dp"
+                tools:text="The Medusa Nebula"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
